# Web-services-2022

./: LICENSE  pyproject.toml  readme.md  setup.cfg
app/: routers.py  schema.py
