[tool.poetry]
name = "BaseApp"
version = "0.1.0"
description = "Base FastAPI app"
authors = ["Ivan Salenek <iasalenek@edu.hse.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.3"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
